fix: now format labels have black readable text color in any theme

--- a/src/components/TryNow/styles.module.css
+++ b/src/components/TryNow/styles.module.css
@@ -91,6 +91,7 @@
   border-bottom-left-radius: 4px;
   width: 64px;
   text-align: center;
+  color: black;
 }
 
 .formatLabel:hover {
